--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "compile": "tsc *.ts --outDir js",
     "compile:watch": "npm run compile -- --watch *.ts",
-    "test": "jest --watch --silent"
+    "test": "jest --watch --silent",
+    "dev": "npx tsc -w & nodemon dist/server.js"
+
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,7 @@
     "@types/node": "^17.0.23",
     "@types/supertest": "^2.0.12",
     "mocha": "^9.2.2",
+    "nodemon": "^2.0.20",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
