--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,12 @@
   },
   "homepage": "https://github.com/appliedtechnology/addons-ts-lab-puppiesApi#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "quicktype": "^16.0.35"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
